--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" href="tos.html"
-                >Terms</a
+                >TERMS</a
               >
             </li>
           </ul>
@@ -80,7 +80,7 @@
       <div class="bg"></div>
     </div>
 
-    <p class="cr">©Copyright Lurec Network 2024 - Current.</p>
+    <p class="cr">© Lurec Network 2024</p>
 
     
     <!-- ALSO DO NOT TOUCH LUCKY -->
@@ -103,9 +103,9 @@
             let width = window.innerWidth;
 
             if (width <= 768 && width > 575) {
-                document.querySelector('.desc').innerHTML = "One of the best Minecraft: Bedrock Edition Practice server. Join us!";
+                document.querySelector('.desc').innerHTML = "One of the best Minecraft: Bedrock Edition Practice server.</br>Join us!";
             } else if (width <= 575) {
-              document.querySelector('.desc').innerHTML = "One of the best Minecraft: Bedrock Edition Practice server. Join us!";
+              document.querySelector('.desc').innerHTML = "One of the best</br>Minecraft: Bedrock Edition Practice server.</br>Join us!";
             } else {
               document.querySelector('.desc').innerHTML = "One of the best Minecraft: Bedrock Edition Practice server. Join us!";
             }
