turns out you have to modify stuff when copying from ai

--- a/tos.html
+++ b/tos.html
@@ -43,7 +43,7 @@
 
   <div class="container tos">
     <h1>Lurec Network Minecraft Server - Terms of Service</h1>
-    <p><strong>Last Updated:</strong> [Date]</p>
+    <p><strong>Last Updated:</strong> 02/09/2024</p>
 
     <h2>1. General Rules</h2>
     <ul>
@@ -112,8 +112,6 @@
       <li><strong>Amendments:</strong> Lurec Network reserves the right to update or modify this TOS at any time. We
         will notify players of significant changes through our website or Discord.</li>
     </ul>
-
-    <h2>9. Governing Law</h2>
     <h2></h2>
 
     <p>By playing on Lurec Network, you acknowledge that you have read, understood, and agree to be bound by these Terms
