--- a/tos.html
+++ b/tos.html
@@ -42,7 +42,7 @@
   </nav>
 
   <div class="container tos">
-    <h1>Lurec Network Minecraft Server - Terms of Service</h1>
+    <h1>Lurec Network - Terms of Service</h1>
     <p><strong>Last Updated:</strong> 02/09/2024</p>
 
     <h2>1. General Rules</h2>
