--- a/index.html
+++ b/index.html
@@ -32,12 +32,13 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
+            <p class="mob-store">STORE</p>
             <span class="navbar-toggler-icon" id="inactive" onclick="navbar();"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item me-5">
-                <a class="nav-link store" href="https://lurec.tebex.io/"
+                <a class="nav-link store pc-mob" href="https://lurec.tebex.io/"
                   >STORE</a
                 >
               </li>
