--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             aria-expanded="false"
             aria-label="Toggle navigation"
           >
-            <p class="mob-store">STORE</p>
+            <p class="mob-store" onclick="window.location.href='https://store.lurec.net';">STORE</p>
             <span class="navbar-toggler-icon" id="inactive" onclick="navbar();"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
