--- a/tos.html
+++ b/tos.html
@@ -3,51 +3,46 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
     <link rel="icon" type="image/png" href="assets/logo/lurec-noBg.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="css/tos.css" />
     <title>Lurec Network</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg">
-      <div class="container-fluid">
-        <img
-          src="assets/logo/icon.png"
-          alt=""
-          class="navbar-brand"
-          draggable="false"
-        />
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarTogglerDemo02"
-          aria-controls="navbarTogglerDemo02"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item me-5">
-              <a class="nav-link store" href="https://lurec.tebex.io/">STORE</a>
-            </li>
-            <li class="nav-item me-5">
-              <a class="nav-link" href="https://x.com/LurecNetwork">TWITTER</a>
-            </li>
-            <li class="nav-item me-5">
-              <a class="nav-link" href="index.html">HOME</a>
-            </li>
-          </ul>
+    <div class="nav-pc">
+      <div class="icon">
+        <img src="assets/logo/icon.png" alt="refresh" />
+      </div>
+      <div class="list">
+        <a href="https://store.lurec.net" class="link store">STORE</a>
+        <a href="https://x.com/LurecNetwork" class="link">TWITTER</a>
+        <a href="index.html" class="link">HOME</a>
+      </div>
+    </div>
+
+    <div class="nav-mb">
+      <div class="top">
+        <div class="icon">
+          <img src="assets/logo/icon.png" alt="refresh" />
+        </div>
+        <div class="list">
+          <a href="https://store.lurec.net" class="link store">STORE</a>
+          <span class="menuIcon">
+            <i class="fa-solid fa-bars" id="inactive"></i>
+          </span>
         </div>
       </div>
-    </nav>
+      <div class="bottom">
+        <a href="https://x.com/LurecNetwork" class="link-mb-a">TWITTER</a><br />
+        <a href="index.html" class="link-mb-b">HOME</a>
+      </div>
+    </div>
 
     <div class="container tos">
       <h1>Lurec Network - Terms of Service</h1>
@@ -176,10 +171,30 @@
       </p>
     </div>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+    <script>
+      document.querySelector(".fa-solid").onclick = function () {
+        const el = document.querySelector(".fa-solid");
+        switch (el.id) {
+          case "inactive":
+            el.id = "active";
+            el.classList.remove("fa-bars");
+            el.classList.add("fa-xmark");
+            document.querySelector(".fa-solid").classList.add("open");
+            document.querySelector(".bottom").style.maxHeight = "max-content";
+            document.querySelector(".link-mb-a").style.opacity = "1";
+            document.querySelector(".link-mb-b").style.opacity = "1";
+            break;
+          case "active":
+            el.id = "inactive";
+            el.classList.remove("fa-xmark");
+            el.classList.add("fa-bars");
+            document.querySelector(".fa-solid").classList.remove("open");
+            document.querySelector(".bottom").style.maxHeight = "0px";
+            document.querySelector(".link-mb-a").style.opacity = "0";
+            document.querySelector(".link-mb-b").style.opacity = "0";
+            break;
+        }
+      };
+    </script>
   </body>
 </html>
