fix discord link

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             class="connect"
             >Connect</a
           >
-          <a href="https://discord.gg/lurec" class="discord">Discord</a>
+          <a href="https://discord.gg/uRW2d2tq3Q" class="discord">Discord</a>
         </div>
       </div>
     </div>
